# mc-whitelister

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  clear_data.sh  docker-compose.yml  flake.nix  justfile
.sqlx/: query-406ac9cdce35735ef236e40f58337f5b402e20910df1c702249b409cf43721e7.json  query-6ff773c5a25cf5a92fff390f4e911fab8a063cc0fc18198c24f01fd18952cdab.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-94886122eb1d50caf4d687672f22ab51ab80bb12e264f7ef3b2ae83332e52dbd.json  query-974567daa7db740adc83a29c794d115823b718017dd60998d61716c978ccfb6f.json  query-9ce4ea1e7849362e6369dc43824b42715ae10def7ce4405af1526c13ca65ab4f.json  query-a9f03a5eab4012c99d88a920a5c49ecf9019ef150329aa6959887230d1dffa0d.json  query-b2e661199701ffcbfe919f09df167d3276ceb5795b2a76226e4cea654494b1a2.json  query-d79b118bfcfdbeee055f6747e39550840900adeda03f8f97e3f52e1a09f5f8a4.json  query-e7ab15977cfcc53e5ec7e8e1f29aa23ab85097ee66117d9496d8cd12dcd126a0.json
luckperms_api/: Cargo.toml  README.md
luckperms_api/.openapi-generator/: FILES
luckperms_api/docs/: Action.md  ActionSource.md  ActionTarget.md  ActionsApi.md  Context.md  CustomMessage.md  CustomMessageReceiveEvent.md  DemotionResult.md  EventsApi.md  GetActions200Response.md  GetEventCustomMessageReceive200ResponseInner.md  GetEventLogBroadcast200ResponseInner.md  GetEventPostNetworkSync200ResponseInner.md  GetEventPostSync200ResponseInner.md  GetEventPreNetworkSync200ResponseInner.md  GetEventPreSync200ResponseInner.md  GetUserLookup200Response.md  Group.md  GroupSearchResult.md  GroupsApi.md  Health.md  LogBroadcastEvent.md  LogBroadcastEventOrigin.md  MessagingApi.md  Metadata.md  MiscApi.md  NewGroup.md  NewNode.md  NewTrack.md  NewUser.md  Node.md  PatchTrackRequest.md  PatchUserRequest.md  PermissionCheckRequest.md  PermissionCheckResult.md  PlayerSaveResult.md  PlayerSaveResultOutcome.md  PostNetworkSyncEvent.md  PreNetworkSyncEvent.md  PromotionResult.md  (+9 more)
luckperms_api/src/apis/: actions_api.rs  configuration.rs  events_api.rs  groups_api.rs  messaging_api.rs  misc_api.rs  mod.rs  tracks_api.rs  users_api.rs
luckperms_api/src/models/: action.rs  action_source.rs  action_target.rs  context.rs  custom_message.rs  custom_message_receive_event.rs  demotion_result.rs  get_actions_200_response.rs  get_event_custom_message_receive_200_response_inner.rs  get_event_log_broadcast_200_response_inner.rs  get_event_post_network_sync_200_response_inner.rs  get_event_post_sync_200_response_inner.rs  get_event_pre_network_sync_200_response_inner.rs  get_event_pre_sync_200_response_inner.rs  get_user_lookup_200_response.rs  group.rs  group_search_result.rs  health.rs  log_broadcast_event.rs  log_broadcast_event_origin.rs  metadata.rs  mod.rs  new_group.rs  new_node.rs  new_track.rs  new_user.rs  node.rs  patch_track_request.rs  patch_user_request.rs  permission_check_request.rs  permission_check_result.rs  player_save_result.rs  player_save_result_outcome.rs  post_network_sync_event.rs  pre_network_sync_event.rs  promotion_result.rs  query_options.rs  sync_type.rs  temporary_node_merge_strategy.rs  track.rs  (+3 more)
luckperms_reconciler/: Cargo.toml
luckperms_reconciler/src/: main.rs
migrations/: 20230602211826_init.down.sql  20230602211826_init.up.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  ms_api.rs  reconcile.rs  routes.rs  session.rs  telemetry.rs
src/ms_api/: models.rs
src/routes/: accounts.rs  all_users.rs  health.rs  index.rs  logout.rs  microsoft.rs  oauth.rs  reconcile.rs
static/: scripts.js  styles.css
templates/: base.html  index.html
