[package]
name = "oauth-bridge"
version = "0.1.0"
description = "oauth bridge"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "3"
members = ["luckperms_api"]

[dependencies]
tokio = {version = "1", features = ["full"]}
axum = {version = "0.8", features = ["macros", "multipart", "tracing", "http2"]}
rand = {version = "0.10", features = ["std"]}
sqlx = {version = "0.8", features = ["runtime-tokio-rustls", "postgres","migrate","macros", "chrono", "uuid"]}

tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}


tracing-opentelemetry  = "0.33"
opentelemetry =  "0.32"
opentelemetry_sdk = "0.32"
opentelemetry-otlp = {version = "0.32", default-features = false, features = ["internal-logs", "logs", "metrics", "trace", "grpc-tonic"]}
opentelemetry-semantic-conventions = "0.32"

tower = "0.5"
# redis = {version = "1.2", features = ["aio", "tokio-comp"]}

#tera = "1.20"
maud = "0.27"

# async-session = "3"

tower-sessions = {version = "0.14", features = ["signed"]}
tower-sessions-sqlx-store = {version = "0.15", features = ["postgres"]}


luckperms_api = {path = "./luckperms_api", default-features = false, features = ["rustls"]}
authentik-client = {version = "2026.2.1",  default-features = false, features = ["rustls"]}

# axum_session = { version = "0.19" }
# axum_session_sqlx = {version = "0.8", features = ["postgres", "tls-rustls"]}
# async-sqlx-sessions = {version = "0.4", features = ["pg"]}
# async-redis-session = "0.2"
# axum-sessions = "0.6"
reqwest = {version = "0.13", default-features = false, features = [ "charset",  "http2", "system-proxy", "json", "multipart", "rustls" ] }
oauth2 = {version = "5.0", default-features = false}
http = "1.4"


uuid = "1.23.3"
#openid = { version = "0.12", default-features = false, features = ["rustls", "microsoft"] }
biscuit = "0.8"
url = "2"
dotenvy = "0.15"
envy = "0.4"
serde = "1"
serde_json = "1"
time = { version = "0.3", features = ["serde"]} 
# chrono = "0.4"
anyhow = "1"
base64 = "0.22"
thiserror = "2"
serde_path_to_error = "0.1"
axum-tracing-opentelemetry = "0.38.0"
