[package]
name = "luckperms_reconciler"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = {version = "1", features = ["full"]}
reqwest = {version = "0.12", default-features = false, features = [ "charset", "http2", "system-proxy", "json", "multipart", "rustls-tls" ]}

tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}


luckperms_api = {path = "../luckperms_api", default-features = false, features = ["rustls"]}
authentik-client = "2026.2.1"


dotenvy = "0.15"
envy = "0.4"
serde = "1"
serde_json = "1"
